; ModuleID = '/home/carl/AnghaBench/libgit2/tests/network/remote/extr_remotes.c_test_network_remote_remotes__error_when_no_push_available.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/network/remote/extr_remotes.c_test_network_remote_remotes__error_when_no_push_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_14__ = type { i32 }
%struct.TYPE_15__ = type { %struct.TYPE_12__* }
%struct.TYPE_12__ = type { i32* }
%struct.TYPE_13__ = type { i8**, i32 }

@GIT_REMOTE_CALLBACKS_INIT = common dso_local global %struct.TYPE_14__ zeroinitializer, align 4
@.str = private unnamed_addr constant [18 x i8] c"refs/heads/master\00", align 1
@_repo = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [13 x i8] c"testrepo.git\00", align 1
@git_transport_local = common dso_local global i32 0, align 4
@GIT_DIRECTION_PUSH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_network_remote_remotes__error_when_no_push_available() #0 {
  %1 = alloca %struct.TYPE_15__*, align 8
  %2 = alloca %struct.TYPE_14__, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_13__, align 8
  %5 = bitcast %struct.TYPE_14__* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 bitcast (%struct.TYPE_14__* @GIT_REMOTE_CALLBACKS_INIT to i8*), i64 4, i1 false)
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %4, i32 0, i32 0
  store i8** %3, i8*** %6, align 8
  %7 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %4, i32 0, i32 1
  store i32 1, i32* %7, align 8
  %8 = load i32, i32* @_repo, align 4
  %9 = call i32 @cl_fixture(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %10 = call i32 @git_remote_create_anonymous(%struct.TYPE_15__** %1, i32 %8, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32, i32* @git_transport_local, align 4
  %13 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %2, i32 0, i32 0
  store i32 %12, i32* %13, align 4
  %14 = load %struct.TYPE_15__*, %struct.TYPE_15__** %1, align 8
  %15 = load i32, i32* @GIT_DIRECTION_PUSH, align 4
  %16 = call i32 @git_remote_connect(%struct.TYPE_15__* %14, i32 %15, %struct.TYPE_14__* %2, i32* null, i32* null)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load %struct.TYPE_15__*, %struct.TYPE_15__** %1, align 8
  %19 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %18, i32 0, i32 0
  %20 = load %struct.TYPE_12__*, %struct.TYPE_12__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %20, i32 0, i32 0
  store i32* null, i32** %21, align 8
  %22 = load %struct.TYPE_15__*, %struct.TYPE_15__** %1, align 8
  %23 = call i32 @git_remote_upload(%struct.TYPE_15__* %22, %struct.TYPE_13__* %4, i32* null)
  %24 = call i32 @cl_git_fail_with(i32 -1, i32 %23)
  %25 = load %struct.TYPE_15__*, %struct.TYPE_15__** %1, align 8
  %26 = call i32 @git_remote_free(%struct.TYPE_15__* %25)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_remote_create_anonymous(%struct.TYPE_15__**, i32, i32) #2

declare dso_local i32 @cl_fixture(i8*) #2

declare dso_local i32 @git_remote_connect(%struct.TYPE_15__*, i32, %struct.TYPE_14__*, i32*, i32*) #2

declare dso_local i32 @cl_git_fail_with(i32, i32) #2

declare dso_local i32 @git_remote_upload(%struct.TYPE_15__*, %struct.TYPE_13__*, i32*) #2

declare dso_local i32 @git_remote_free(%struct.TYPE_15__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
